--- a/nginx_rules.conf
+++ b/nginx_rules.conf
@@ -4,13 +4,17 @@ location ~ ^/wp-content/plugins/elementor/assets/lib/font-awesome/js/v4-shims.mi
 location ~ ^/wp-content/themes/astra/assets/js/minified/frontend.min.js$ { types { } default_type "application/x-javascript"; }
 location ~ ^/wp-includes/js/dist/dom-ready.min.js$ { types { } default_type "application/x-javascript"; }
 location ~ ^/wp-content/plugins/astra-sites/inc/lib/onboarding/assets/dist/template-preview/main.js$ { types { } default_type "application/x-javascript"; }
+location ~ ^/wp-content/plugins/pro-elements/assets/js/webpack-pro.runtime.min.js$ { types { } default_type "application/x-javascript"; }
 location ~ ^/wp-content/plugins/elementor/assets/js/webpack.runtime.min.js$ { types { } default_type "application/x-javascript"; }
 location ~ ^/wp-includes/js/jquery/jquery.min.js$ { types { } default_type "application/x-javascript"; }
 location ~ ^/wp-includes/js/jquery/jquery-migrate.min.js$ { types { } default_type "application/x-javascript"; }
 location ~ ^/wp-content/plugins/elementor/assets/js/frontend-modules.min.js$ { types { } default_type "application/x-javascript"; }
-location ~ ^/wp-content/plugins/elementor/assets/lib/waypoints/waypoints.min.js$ { types { } default_type "application/x-javascript"; }
+location ~ ^/wp-includes/js/dist/hooks.min.js$ { types { } default_type "application/x-javascript"; }
+location ~ ^/wp-includes/js/dist/i18n.min.js$ { types { } default_type "application/x-javascript"; }
+location ~ ^/wp-content/plugins/pro-elements/assets/js/frontend.min.js$ { types { } default_type "application/x-javascript"; }
 location ~ ^/wp-includes/js/jquery/ui/core.min.js$ { types { } default_type "application/x-javascript"; }
 location ~ ^/wp-content/plugins/elementor/assets/js/frontend.min.js$ { types { } default_type "application/x-javascript"; }
+location ~ ^/wp-content/plugins/pro-elements/assets/js/elements-handlers.min.js$ { types { } default_type "application/x-javascript"; }
 location ~ ^/wp-content/themes/astra/assets/fonts/astra.woff$ { types { } default_type "application/font-woff"; }
 location ~ ^/wp-content/themes/astra/assets/fonts/astra.ttf$ { types { } default_type "application/font-sfnt"; }
 location ~ ^/wp-content/plugins/elementor/assets/lib/font-awesome/webfonts/fa-brands-400.woff2$ { types { } default_type "application/font-woff2"; }
