--- a/nginx_rules.conf
+++ b/nginx_rules.conf
@@ -1,13 +1,17 @@
 error_page 404 /404_not_found/index.html;
 location ~ ^/404_not_found/$ { internal; }
+location ~ ^/wp-includes/js/jquery/jquery.min.js$ { types { } default_type "application/x-javascript"; }
+location ~ ^/wp-includes/js/jquery/jquery-migrate.min.js$ { types { } default_type "application/x-javascript"; }
 location ~ ^/wp-content/plugins/elementor/assets/lib/font-awesome/js/v4-shims.min.js$ { types { } default_type "application/x-javascript"; }
 location ~ ^/wp-content/themes/astra/assets/js/minified/frontend.min.js$ { types { } default_type "application/x-javascript"; }
 location ~ ^/wp-includes/js/dist/dom-ready.min.js$ { types { } default_type "application/x-javascript"; }
 location ~ ^/wp-content/plugins/astra-sites/inc/lib/onboarding/assets/dist/template-preview/main.js$ { types { } default_type "application/x-javascript"; }
+location ~ ^/wp-content/plugins/easy-fancybox/vendor/purify.min.js$ { types { } default_type "application/x-javascript"; }
+location ~ ^/wp-content/plugins/easy-fancybox/fancybox/1.5.4/jquery.fancybox.min.js$ { types { } default_type "application/x-javascript"; }
+location ~ ^/wp-content/plugins/easy-fancybox/vendor/jquery.easing.min.js$ { types { } default_type "application/x-javascript"; }
+location ~ ^/wp-content/plugins/easy-fancybox/vendor/jquery.mousewheel.min.js$ { types { } default_type "application/x-javascript"; }
 location ~ ^/wp-content/plugins/pro-elements/assets/js/webpack-pro.runtime.min.js$ { types { } default_type "application/x-javascript"; }
 location ~ ^/wp-content/plugins/elementor/assets/js/webpack.runtime.min.js$ { types { } default_type "application/x-javascript"; }
-location ~ ^/wp-includes/js/jquery/jquery.min.js$ { types { } default_type "application/x-javascript"; }
-location ~ ^/wp-includes/js/jquery/jquery-migrate.min.js$ { types { } default_type "application/x-javascript"; }
 location ~ ^/wp-content/plugins/elementor/assets/js/frontend-modules.min.js$ { types { } default_type "application/x-javascript"; }
 location ~ ^/wp-includes/js/dist/hooks.min.js$ { types { } default_type "application/x-javascript"; }
 location ~ ^/wp-includes/js/dist/i18n.min.js$ { types { } default_type "application/x-javascript"; }
